--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,10 @@
   <meta charset="utf-8">
   <title>DoctorApp</title>
   <base href="/">
-
      <meta name="viewport" content="width=device-width, initial-scale=1">
-
+     <link rel="icon" type="image/x-icon" href="assets/images/docapp-logo.png">
      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaKbVhcX_22R_pRKDYuNA7vox-PtGaDkI&libraries=places&language=en"></script>
-     <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script> -->
+     <!-- <script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script> -->
 </head>
 <body>
   <app-root>loading...</app-root>
